--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
 name: Docker Image CI
 
 env:
-  REGISTRY: ${{ vars.REGISTRY }} 
   REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
   REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
+  REGISTRY: ${{ vars.REGISTRY }}
+  FULL_IMAGE: ${{ vars.REGISTRY }}/${{ github.repository }}:v${{ github.sha }}
+  CACHE_IMAGE: ${{ vars.REGISTRY }}/${{ github.repository }}:cache
+  LATEST_IMAGE: ${{ vars.REGISTRY }}/${{ github.repository }}:latest
 
 on:
   push:
@@ -15,16 +18,24 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
     - name: Login to Ali Docker
       uses: docker/login-action@v2
       with:
-        registry: ${{ vars.REGISTRY }}
-        username: ${{ secrets.REGISTRY_USERNAME }}
-        password: ${{ secrets.REGISTRY_PASSWORD }}
+        registry: ${{ env.REGISTRY }}
+        username: ${{ env.REGISTRY_USERNAME }}
+        password: ${{ env.REGISTRY_PASSWORD }}
     - name: Build and push
       id: docker_build
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v4
       with:
         context: .
         push: true
-        tags: ${{ vars.REGISTRY }}/kind:v${{ github.sha }}
+        tags: |
+          ${{ env.FULL_IMAGE }}
+          ${{ env.LATEST_IMAGE }}
+        cache-from: type=registry,ref=${{ env.CACHE_IMAGE }}
+        cache-to: type=registry,ref=${{ env.CACHE_IMAGE }},mode=max
+      env: 
+        FULL_IMAGE: ${{ env.FULL_IMAGE }}
