--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
         tags: |
           ${{ env.FULL_IMAGE }}
           ${{ env.LATEST_IMAGE }}
+        platforms: linux/arm64,linux/amd64
         cache-from: type=registry,ref=${{ env.CACHE_IMAGE }}
         cache-to: type=registry,ref=${{ env.CACHE_IMAGE }},mode=max
         build-args: |
@@ -51,3 +52,4 @@ jobs:
           KINDEST_NODE_VERSION=${{ vars.KINDEST_NODE_VERSION }}
         tags: |
           ${{ env.KINDEST_NODE_IMAGE }}
+        platforms: linux/arm64,linux/amd64
