--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
-name: lcp-kind
+name: kind
 networking:
   apiServerAddress: 172.17.0.13
   apiServerPort: 6443
