--- a/config/config.yaml
+++ b/config/config.yaml
@@ -9,3 +9,6 @@ networking:
 nodes:
 - role: control-plane
   image: registry.cn-hangzhou.aliyuncs.com/nfyxhan/kindest-node:v1.19.16
+apiServer:
+  certificate: 
+    duration: 87600h
